methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:6: error: not found: value estFaceMur
   case estFaceMur() => return false
        ^