methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
 
  var buggle=0
  buggle match{
   case estFaceMur() => return false
   case _ => avance()
   						if (getCouleurSol()==Color.green){
                recule()
                return true
              }
   						else {
                recule()
                return false
              }
 }
}